# alephzero-escrow

./: Cargo.toml  lib.rs  package-lock.json  package.json
src/: escrow.rs
tests/: escrow.json  psp22.json  test.ts  tsconfig.json
