[package]
name = "escrowcontract"
version = "1.0.0"
authors = ["Przemyslaw Kulej"]
edition = "2021"

[dependencies]

ink = { version = "4.2.0", default-features = false }
ink_lang = { version = "3.4.0", default-features = false }
ink_storage = { version = "4.2.0", default-features = false }
ink_primitives = { version = "4.2.0", default-features = false }
ink_env = { version = "4.2.0", default-features = false }
ink_prelude = { version = "4.2.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
psp22 = { version = "1.0", default-features = false, features = ["ink-as-dependency"] }



[dev-dependencies]
ink_e2e = { version = "4.2.0" }

[lib]
path = "src/escrow.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_lang/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "psp22/std",
    "ink_primitives/std",
]
ink-as-dependency = []
e2e-tests = []
